css/style.scss
/* ... */
#my-menu {

	p {
		margin-bottom: 5px;
	}

	a, a:active {
		color: $white;
	}

	a:hover {
		color: $light-blue;
	}

	.pages {

		.fa {
			margin-right: 10px;
		}
	}
}

.links {
	margin-top: 50px;
	text-align: center;

	i {
		padding-left: 5px;
		padding-right: 5px;

		@media (min-width: $screen-sm-min) {
			padding-left: 10px;
			padding-right: 10px;
		}
	}

	.fa {
		-webkit-transition: 0.3s;
		-moz-transition: 0.3s;
		transition: 0.3s;
	}

	.fa-twitter:hover {
		color: $twitter;
	}
        .fa-instagram:hover {
                color: $instagram;
        }

	.fa-linkedin:hover {
		color: $linkedin;
	}

	.fa-google-plus:hover {
		color: $google-plus;
	}

	.fa-github-alt:hover {
		color: $github;
	}

	.fa-stack-overflow:hover {
		color: $stack-overflow;
	}

	.fa-rss:hover {
		color: $rss;
	}
}

/* Projects Showcase */

.projects-showcase {
	padding-top: 40px;
	padding-bottom: 10px;

	.projects-row {
		display: flex;
		justify-content: space-evenly;
		align-items: flex-start;
		gap: 40px;
	}

	.project-card {
		display: flex;
		flex-direction: column;
		align-items: center;
		text-decoration: none;
		flex: 0 0 auto;
		width: 140px;
		transition: transform 0.3s ease;

		@media (min-width: $screen-sm-min) {
			width: 170px;
		}

		&:hover {
			transform: translateY(-4px);
			text-decoration: none;
		}
	}

	.project-icon {
		width: 120px;
		height: 120px;
		overflow: hidden;
		display: flex;
		align-items: center;
		justify-content: center;
		margin-bottom: 12px;

		@media (min-width: $screen-sm-min) {
			width: 150px;
			height: 150px;
		}

		img {
			width: 100%;
			height: 100%;
			object-fit: contain;
		}
	}

	.project-name {
		font-family: 'Montserrat', sans-serif;
		font-size: 16px;
		color: $white;
		text-align: center;
		letter-spacing: 1px;
		transition: color 0.3s ease;

		@media (min-width: $screen-sm-min) {
			font-size: 18px;
		}
	}

	.project-card:hover .project-name {
		color: $light-blue;
	}
}

/* Other Tools */

.other-tools {
	text-align: center;
	padding-top: 60px;
	padding-bottom: 20px;
	max-width: 500px;
	margin: 0 auto;
	float: none;

	h2 {
		font-family: 'Montserrat', sans-serif;
		color: $light-blue;
		font-size: 16px;
		margin-bottom: 16px;
		letter-spacing: 2px;
		text-transform: uppercase;

		@media (min-width: $screen-sm-min) {
			font-size: 18px;
		}
	}

	ul {
		text-align: center;
		padding: 0 15px;
		margin: 0;

		li {
			margin-bottom: 8px;
			font-size: 13px;
			color: $light-medium;
			line-height: 1.5;

			@media (min-width: $screen-sm-min) {
				font-size: 15px;
				margin-bottom: 10px;
			}

			a {
				color: $white;
				font-weight: 400;
			}

			a:hover {
				color: $light-blue;
			}
		}
	}
}

/* Index */

.index {
	height: 100%;
	max-height: 100%;
	width: 100%;
	padding: 0px;

	@media (min-width: $screen-sm-min) {
		width: 700px;
		max-width:700px;
	}

	.header {
		margin-top: 10px;
		margin-left: 0%;
		margin-bottom: 0px;
		font-size: 32px;
		width: 100%;

		@media (min-width: $screen-lg-min) {
			margin-left: -10%;
			width: 120%;
		}
	}

	.categories {
		font-size: 22px;
	}

	.content-panel:nth-of-type(1) {
		border-bottom: 10px solid $light-blue;
	}

	.author-header {
		font-family: 'Montserrat', sans-serif;
		color: $light-blue;
		margin-top: 0px;
		padding-top: 15px;
		font-size: 30px;

		@media (min-width: $screen-sm-min) {
			font-size: 52px;
			margin-top: 0px;
		}

		@media (min-width: $screen-md-min) {
			font-size: 60px;
			margin-top: -20px;
		}
	}

	.row {
		height: 100%;
		max-height: 100%;
		margin-top: 60px;
		margin-left: 0px;
		margin-right: 0px;
	}

	.gravatar {
		width: 100%;
		margin-top: -80px;
		text-align: center;
	}

	.author-text {
		text-align: center;
		margin-top: 30px;

		b {
			font-size: 32px;
		}
	}

	.links {
		font-size: 2em;
	}

	.articles {
		text-align: center;
		font-size: 20px;

		h2 {
			margin-bottom: 30px;
			color: $light-blue;
			font-size: 26px;
		}

		ul {

			padding: 0px;

			li {
				margin-bottom: 20px;
				font-size: 24px;

				a:hover {
					color: $light-medium;
				}

				small {
					font-size: 14px;
					margin-top: -10px;
					padding-top: 0px;
					color: $light-medium;
				}

			}

			li:nth-last-of-type(1) {

				small {
					font-size: 16px;
				}

			}
		}

		a, a:active {
			color: $white;
			white-space: nowrap;
		}

		a:hover {
			color: $light-blue;
		}
	}

	.copyright {
		margin-top: 50px;
		text-align: center;
	}

	.links {
		a, a:active {
			color: #FFFFFF;
		}
	}

	.menu {
		margin-top: 250px;
		margin-bottom: 20px;
		font-size: 20px;
		position: absolute;
		bottom: 0px;

		a, a:active {
			color: #FFFFFF;
		}

		a:hover {
			color: $light-blue;
		}

		ul {
			margin-bottom: 30px;
			padding-left: 10px;

			ul {
				padding-left: 50px;
				list-style: none;
				margin-left: 0;
				text-indent: -0.6em;
			}
		}
	}

}

.all-posts {
	margin-left: 0px;
	margin-right: 0px;

	@media (min-width: $screen-sm-min) {
		#search-container {
			padding-top: 75px;
			padding-bottom: 150px;
		}
	}

	@media (min-width: $screen-md-min) {
		margin-left: -15px;
		margin-right: -15px;

		#search-container {
			padding-bottom: 300px;
		}
	}

	#search-input {
		position:relative;
		width: 100%;
		padding:6px 15px 6px 30px;
		margin: 2px;
		margin-top: 50px;

		color:$dark;
		background-color:$white;

		border:1px solid #adc5cf;
		border-radius:15px;
		-moz-border-radius:15px;
		-webkit-border-radius:15px;
	}

	#search-input:focus {
		border: none;
  }

	.content-panel {
		padding-left: 10px;
		padding-right: 10px;
		@media (min-width: $screen-md-min) {
			padding-left: 30px;
			padding-right: 30px;
		}
	}
}
/* ... */

